Add JNI-based BLAS, LAPACK, and ARPACK implementations (#1)
* v2-SNAPSHOT

* Add JNI-based wrapper for BLAS

* Print which implementation is currently running for benchmark

Since java or native can mean more things, let's just log it out.

* Add JDK17 profile, just in case.

* Try JNIBLAS before ForeignLinkerBLAS

The former is faster because it doesn't require to copy memory from the
heap to native memory

* Use Fortran symbols directly

Still without using any external library.

* Remove leftover debug comments

* Rename dev.ludovic.netlib.blas.VectorizedBLAS to dev.ludovic.netlib.blas.VectorBLAS

This aligns with dev.ludovic.netlib.blas.ForeignLinkerBLAS

* fixup! Rename dev.ludovic.netlib.blas.VectorizedBLAS to dev.ludovic.netlib.blas.VectorBLAS

* Remove com.github.fommil from BLAS fully and WIP for LAPACK

* Make sure critical JNI regions don't contain unecessary JNI calls

* Do better error handling + Load org.netlib.util.*W types

* Base implementation for LAPACK + Implement calls used by Spark

I still need to come up with proper testing.

* Add native implementation for benchmarking JDK 8 and 11

It's now supported with JNIBLAS, JNILAPACK, and (upcoming) JNIARPACK.

* Allow manual trigger of the workflow

* Relax the compiler warnings for now

* Fix installed dependencies

* Implement some more BLAS calls in JNIBLAS

* Fix bound condition check

It triggered the "Vector API breaks JNI". Turns out testing just got
better and uncovered a bug.

* Add code coverage information

* Add scaffolding for JNIARPACK

* Make sure license is consistent across all files

* There might be cases where we want to make a release on a SNAPSHOT tag

* Add scaffolding for all ARPACK, BLAS, and LAPACK routines

* Fix surefire:test

jacoco wouldn't setup the argLine variable. Just set it to ""

* Add missing libarpack2-dev dependency on CI

* Cache M2 repository to speed up CI

* Relax caching across JDK ve